[gd_scene load_steps=2 format=3 uid="uid://bumrulpb1stxh"]

[ext_resource type="Script" path="res://CardOptions.gd" id="1_847i7"]

[node name="Control" type="Node2D"]
script = ExtResource("1_847i7")

[node name="Button" type="Button" parent="."]
offset_left = 3.0
offset_top = -1.0
offset_right = 574.0
offset_bottom = 203.0
theme_override_font_sizes/font_size = 150
text = "Remove Card"

[node name="Button2" type="Button" parent="."]
offset_left = 2.0
offset_top = 229.0
offset_right = 972.0
offset_bottom = 442.0
theme_override_font_sizes/font_size = 150
text = "Back to Deck"

[node name="Button3" type="Button" parent="."]
offset_left = 2.0
offset_top = 471.0
offset_right = 972.0
offset_bottom = 684.0
theme_override_font_sizes/font_size = 150
text = "Run Card Script"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
